slight tweak to notebook

--- a/data/outlines/load_lakes.ipynb
+++ b/data/outlines/load_lakes.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -176,13 +176,13 @@
        "93   143.202974  Fricker & Scambos, 2009, J. Glac., doi:10.3189...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gdf[gdf['name']=='MercerSubglacialLake']"
+    "gdf.loc[gdf['name']=='MercerSubglacialLake']"
    ]
   },
   {
