--- a/data/outlines/load_lakes.ipynb
+++ b/data/outlines/load_lakes.ipynb
@@ -192,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export outlines to kml file to view in Google Earth, etc.\n",
+    "# export outlines to kml file to view in Quantarctica, Google Earth, etc.\n",
     "import fiona\n",
     "\n",
     "fiona.supported_drivers['KML'] = 'rw'\n",
