--- a/data/outlines/load_lakes.ipynb
+++ b/data/outlines/load_lakes.ipynb
@@ -59,9 +59,9 @@
     "    if np.isnan(outlines_xy)[:,0].sum() == 0:\n",
     "        geometry = Polygon(outlines_xy)\n",
     "        lon, lat = XY_TO_LL.transform(outlines_xy[:,0], outlines_xy[:,1])\n",
-    "        THIS_AREA = abs(geod.polygon_area_perimeter(lon,lat)[0])/1e6\n",
+    "        this_area = abs(geod.polygon_area_perimeter(lon,lat)[0])/1e6\n",
     "    else:\n",
-    "        THIS_AREA = 0\n",
+    "        this_area = 0\n",
     "        # break at NaN values and load each as separate polygons\n",
     "        idx = np.where(np.isnan(outlines_xy[:,0]))[0]\n",
     "\n",
@@ -69,7 +69,7 @@
     "        this_outline = outlines_xy[0:idx[0],:]\n",
     "        pgons = [Polygon(this_outline)] # put the first polygon in a list\n",
     "        lon,lat = XY_TO_LL.transform(this_outline[:,0], this_outline[:,1])\n",
-    "        THIS_AREA += abs(geod.polygon_area_perimeter(lon,lat)[0])/1e6 # add its area\n",
+    "        this_area += abs(geod.polygon_area_perimeter(lon,lat)[0])/1e6 # add its area\n",
     "        for i in np.arange(0,len(idx)):\n",
     "            if i == len(idx)-1:\n",
     "                this_outline = outlines_xy[idx[i]+1:,:]\n",
@@ -78,13 +78,13 @@
     "\n",
     "            pgons.append(Polygon(this_outline))\n",
     "            lon,lat = XY_TO_LL.transform(this_outline[:,0], this_outline[:,1])\n",
-    "            THIS_AREA += abs(geod.polygon_area_perimeter(lon,lat)[0])/1e6\n",
+    "            this_area += abs(geod.polygon_area_perimeter(lon,lat)[0])/1e6\n",
     "        geometry = MultiPolygon(pgons)\n",
     "\n",
     "    # append all the results in the right place\n",
     "    outline_geometries.append(geometry)\n",
     "    citations.append(h5f[lake].attrs.get('citation')[0].decode('UTF-8'))\n",
-    "    areas.append(THIS_AREA)\n",
+    "    areas.append(this_area)\n",
     "\n",
     "# make a pandas dataframe with all the necessary info\n",
     "df = pd.DataFrame(zip(h5f.keys(), outline_geometries, areas, citations),\n",
